scripts/k8s/annotation/4container_other_than_v1/3_deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  annotations:
    good1: value1
  labels:
    app: my-dep
    good1: value1
  name: my-dep
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-dep
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      annotations:
        good2: value1
      labels:
        app: my-dep
        good1: value1
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
