scripts/k8s/annotation/4container_other_than_v1/1_policy1.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "demo1"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  variables:
  - name: allowedlist
    expression: '{"good1": "value1*", "good2": "value2*"}'
  - name: dataset1a
    expression: 'has(object.metadata.annotations) ? object.metadata.annotations : []'
  - name: dataset1b
    expression: 'has(object.spec.template.metadata.annotations) ? object.spec.template.metadata.annotations : []'
  - name: dataset3
    expression: 'has(object.spec.jobTemplate.metadata.annotations) ? object.spec.jobTemplate.metadata.annotations: []'
  - name: isType1
    expression: 'object.kind in ["Pod"] ? true: false'
  - name: isType2
    expression: 'object.kind in ["Deployment","ReplicaSet","DaemonSet","StatefulSet","Job"] ? true: false'
  - name: isType3
    expression: 'object.kind in ["CronJob"] ? true: false'
  validations:
    - expression: '
        !variables.isType1 ||
        (
          !variables.dataset1a.exists(x, !(x in variables.allowedlist && matches(variables.dataset1a[x], variables.allowedlist[x])))
        )
        '
      message: '❌ operator: annotations must use only allowed key/value pairs. (contains other than)'
    - expression: '
        !variables.isType2 ||
        (
          (!variables.dataset1a.exists(x, !(x in variables.allowedlist && matches(variables.dataset1a[x], variables.allowedlist[x])))) 
          &&
          (!variables.dataset1b.exists(x, !(x in variables.allowedlist && matches(variables.dataset1b[x], variables.allowedlist[x])))) 
        )
        '
      message: '❌ operator: annotations must use allowed key/value pairs. (contains other than)'
    - expression: '
        !variables.isType3 ||
        (
          (!variables.dataset1a.exists(x, !(x in variables.allowedlist && matches(variables.dataset1a[x], variables.allowedlist[x])))) 
          &&
          (!variables.dataset3.exists(x, !(x in variables.allowedlist && matches(variables.dataset3[x], variables.allowedlist[x])))) 
        )
        '
      message: '❌ operator: annotations must use allowed key/value pairs. (contains other than)'
